--- a/src/uqconfig.json
+++ b/src/uqconfig.json
@@ -3,6 +3,10 @@
         "bz": {
             "name": "bizdev",
             "alias": "bz"
+        },
+        "jk": {
+            "name": "百灵威系统工程部",
+            "alias": "jk"
         }
     },
     "uqs": [
@@ -10,6 +14,11 @@
             "dev": "bz",
             "name": "ushop",
             "alias": "UShop"
+        },
+        {
+            "dev": "jk",
+            "name": "me",
+            "alias": "Me"
         }
     ]
 }
