--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "ts-uq-react",
+    "name": "ts-uq",
     "version": "0.0.1",
-    "description": "build typescript tonwa uq schema in React",
+    "description": "build typescript tonwa uq schema",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
