--- a/src/uqconfig.json
+++ b/src/uqconfig.json
@@ -21,7 +21,7 @@
         },
         {
             "dev": "jksoft",
-            "name": "ticket",
+            "name": "jksoft-mini-jxc-trial",
             "alias": "Ticket"
         }
     ],
